--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <i id="Smile" class="fa fa-smile-o"></i>
                 <li id="Name">Rohan</li>
                <a href="index.html"><li id="home">Home</li></a> 
-               <a href=""> <li id="About">About</li></a>
+               <a href="About.html"> <li id="About">About</li></a>
                <a href=""> <li id="Contact">Contact</li></a>
                 <i id="Icon" class="fa fa-envelope-o"></i>
                 <li id="Mail">rohan.cs22@bmsce.ac.in</li>
