--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+
     <title>Portfolio</title>
   
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
                 <li id="Name">Rohan</li>
                <a href="index.html"><li id="home">Home</li></a> 
                <a href="About.html"> <li id="About">About</li></a>
-               <a href=""> <li id="Contact">Contact</li></a>
+               <a href="Contact.html"> <li id="Contact">Contact</li></a>
                 <i id="Icon" class="fa fa-envelope-o"></i>
                 <li id="Mail">rohan.cs22@bmsce.ac.in</li>
            </ul>
