--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,12 @@
         </nav>
      </header>
     <div class="card-1">
-
+        <div class="color">
+            
+        </div>
+        <p id="heading">
+            Instagram
+        </p>
     </div>
 </body>
 </html>
